--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -115,6 +115,7 @@
   // init Masonry after all images have loaded
   $grid.masonry({
     itemSelector: '.grid-item',
+    gutter: 5,
   });
 });
 });
