Revised menu bar

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,14 +19,12 @@
 	    </div>
     </div>
   </div>
-
   <div class="row show-for-small-only">
     <div class="small-12 columns">
-      <div class="top-bar">
+      <div class="top-bar" data-topbar>
         <ul class="vertical menu" data-accordion-menu>
           <li>
-            <a href="#">Menu</a>
-            <ul class="menu vertical nested">
+            <ul class="menu vertical">
               <li><a href="/index">HOME</a></li>
               <li><a href="/about">ABOUT</a></li>
               <li><a href="/contact_us">CONTACT US</a></li>
@@ -41,7 +39,6 @@
       </div>
     </div>
   </div>
-
 <div class="row hide-for-small-only">
   <div class="medium-12 columns">
     <div class="top-bar">
@@ -90,7 +87,6 @@
 
 </body>
 </html>
-
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/3.3.2/masonry.pkgd.js"></script>
