grit-item width

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -180,11 +180,11 @@ p.pfooter{
 
 .grid-sizer,
 .grid-item {
-  width: 33%;
-	padding: 4px;
+  width: 370px;
+	padding: 5px;
 	border-style: solid;
-	border-color: rgba($black, 0.35);
-	border-width: 2px;
+	border-color: rgba($black, 0.4);
+	border-width: 3px;
 	margin-bottom: 5px;
 	border-radius: 5px;
 
