--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -26,7 +26,11 @@
 		<%=image_tag("Header_Placeholder.png", alt: "Header", width:"100%")%>
 		<br>
 		<br>
-		<h4> Calling all King's Researchers! </h4>
+    <h4> Search for an Opportunity </h4>
+    <%= form_tag search_path, method: :get do %>
+      <%= text_field_tag :search, params[:search] %>
+      <%= button_tag( 'Search',name: nil, type: 'submit',class: "success button") %>
+    <% end %>
 	</div>
 </div>
 
